	PR target/68018 	* config/i386/i386.c (ix86_compute_frame_layout): Realign the stack 	for 64-bit MS_ABI targets also when default incoming stack boundary 	is overriden.

testsuite/ChangeLog:

	PR target/68018
	* gcc.target/i386/pr68018.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@229120 138bc75d-0d04-0410-961f-82ee72b054a4